# roojspacker

./: .gitignore  .roobuilder.jcfg  AUTHORS  CMakeCache.txt  CMakeLists.txt  COPYING  INSTALL  Makefile.am  README.md  autogen.sh  cmake_install.cmake  config1.builder  configure  configure.ac  meson.build  old_deb_control  roojspacker-1.0.pc.in  roojspacker-1.1.pc.in  roojspacker.pc.in
bindings/php/: README  config.m4  example.php  php_roojspacker.h  roojspacker.c  roojspacker.xml
bindings/roojspacker/: .cvsignore  CREDITS  README  package.xml  package2.xml  php_roojspacker.h  roojspacker.dsp  roojspacker.xml
bindings/roojspacker/manual/: file-entities.ent  manual.xml.in
bindings/roojspacker/manual/roojspacker/: configure.xml  constants.xml  ini.xml  reference.xml
bindings/roojspacker/tests/: roojspacker__loadFile.phpt  roojspacker__pack.phpt
cmake/: FindGLib.cmake  FindGObjectIntrospection.cmake  FindValadoc.cmake
debian/: README  README.Debian  README.source  changelog  control  copyright  debhelper-build-stamp  files  manpage.1.ex  manpage.md.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  roojspacker.cron.d.ex  roojspacker.doc-base.EX  roojspacker.substvars  rules  watch.ex
debian/roojspacker/DEBIAN/: control  md5sums  shlibs  triggers
debian/roojspacker/usr/include/: roojspacker-1.2.h
debian/roojspacker/usr/lib/: libroojspacker-1.2.so.1.2  libroojspacker-1.2.so.1.2.0
debian/roojspacker/usr/share/pkgconfig/: roojspacker-1.2.pc
debian/upstream/: metadata.ex
examples/: test.c
jsdoc/: CMakeLists.txt  Collapse.c  CompressWhite.c  DocBuilder.c  DocComment.c  DocParser.c  DocParser.vala  DocTag.c  Identifier.c  Lang.c  Packer.c  PackerRun.c  PrettyPrint.c  Scope.c  ScopeParser.c  ScopeParser.vala  Symbol.c  SymbolSet.c  TextStream.c  Token.c  TokenReader.c  TokenStream.c  Walker.c  cmake_install.cmake
obj-x86_64-linux-gnu/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
obj-x86_64-linux-gnu/roojspacker/: Makefile  cmake_install.cmake  libroojspacker-1.2.so.1.2  roojspacker-1.2.vapi
obj-x86_64-linux-gnu/roojspacker/roojspacker-1.2-vala/source/roojspacker/: Collapse.c  Collapse.vapi  CompressWhite.c  CompressWhite.vapi  DocBuilder.c  DocBuilder.vapi  DocComment.c  DocComment.vapi  DocParser.c  DocParser.vapi  DocTag.c  DocTag.vapi  Identifier.c  Identifier.vapi  Lang.c  Lang.vapi  Packer.c  Packer.vapi  PackerRun.c  PackerRun.vapi  PrettyPrint.c  PrettyPrint.vapi  Scope.c  Scope.vapi  ScopeParser.c  ScopeParser.vapi  Symbol.c  Symbol.vapi  SymbolSet.c  SymbolSet.vapi  TextStream.c  TextStream.vapi  Token.c  Token.vapi  TokenReader.c  TokenReader.vapi  TokenStream.c  TokenStream.vapi  Walker.c  Walker.vapi
roojspacker/: .gitignore  .h  .vapi  CMakeLists.txt  CompressWhite.vala  DocBuilder.vala  DocComment.vala  DocParser.vala  DocTag.vala  Identifier.vala  Lang.vala  Packer.vala  PackerRun.vala  PrettyPrint.vala  ScopeParser.vala  Symbol.vala  SymbolSet.vala  TextStream.vala  Walker.vala  cmake_install.cmake  configure.ac  libroojspacker-1.2.so..  libroojspacker-1.2.so...  org.gnome.Roojspacker.json  roojspacker.pc.in
roojspacker/src/: Makefile.am  main.c  main.vala
src/: CMakeLists.txt  DocComment.vala  Makefile.am  main.vala  roojspacker-1.0.gir  roojspacker-1.0.h  roojspacker-1.2.h  roojspacker-1.2.vapi  roojspacker.h  roojspacker.vapi
src/jsdoc/: Collapse.c  Collapse.vala  CompressWhite.c  CompressWhite.vala  DocBuilder.vala  DocComment.vala  DocParser.vala  DocTag.vala  Identifier.c  Lang.c  Lang.vala  Packer.c  Packer.vala  PackerRun.c  PackerRun.vala  PrettyPrint.vala  Scope.c  Scope.vala  ScopeParser.c  ScopeParser.vala  Symbol.vala  SymbolSet.vala  TextStream.c  TextStream.vala  Token.c  Token.vala  TokenReader.c  TokenReader.vala  TokenStream.c  TokenStream.vala  Walker.vala
tests/: test1.sh  utftest.vala
tools/: flutter_extract.php
